# elite-rag-server

./: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy-staging.yml  deploy.yml
docs/: POSTMAN_TESTING.md
src/: config.py  main.py
src/api/graphql/: context.py  router.py  schema.py
src/api/graphql/dataloaders/: dataloaders.py  document_loader.py  user_loader.py
src/api/graphql/permissions/: auth.py
src/api/graphql/resolvers/mutation/: auth_mutation.py  document_mutation.py  mutation.py
src/api/graphql/resolvers/query/: document_query.py  query.py  search_query.py
src/api/graphql/types/: auth.py  document.py  inputs.py  search.py  user.py
src/application/services/: auth_service.py  document_service.py  search_service.py
src/domain/: exceptions.py
src/domain/interfaces/: document_repository.py  user_repository.py  vector_repository.py
src/domain/models/: __init__.py  document.py  search_result.py  user.py
src/infrastructure/auth/: jwt_handler.py  password_hasher.py
src/infrastructure/embeddings/: base.py  local_embeddings.py  openai_embeddings.py
src/infrastructure/persistence/: database.py
src/infrastructure/persistence/models/: __init__.py  document_chunk_model.py  document_model.py  user_model.py
src/infrastructure/persistence/repositories/: document_repository.py  user_repository.py  vector_repository.py
src/infrastructure/persistence/seeding/: __init__.py  admin_user_seeder.py  base.py  data_seeder.py
